# EMC

./: CMakeLists.txt  README.md  configs.cpp  configs.h  emc.conf  emc_atomic.cu  emc_cuda.cu  emc_cuda_help.h  emc_helper.cpp  emc_helper.h  file_helper.cpp  file_helper.h  main.cpp  mpi_helper.cpp  mpi_helper.h  rotations.c  rotations.h  timer_helper.cpp  timer_helper.h
